--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
      rts service area end -->
 
     <!-- rts easy step area start -->
+      <div id="services" class="rts-service-area-one rts-section-gap">
     <div class="rts-easy-step-area rts-section-gap">
         <div class="container">
             <div class="row">
@@ -511,6 +512,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <!-- rts call to action area end -->
 
