--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <p class="disc">
                             We specialize in designing and installing built-in kitchen units, bedroom wardrobes, vanities, and TV stands. Our carpentry solutions are tailored to your space and style, ensuring quality craftsmanship and durable finishes. Transform your home with custom storage and elegant woodwork from a trusted carpenter.
                         </p>
-                        <a href="#" class="rts-btn btn-primary with-arrow">Request Quote <i class="fa-regular fa-arrow-up-right"></i></a>
+                        <a href="#contact" class="rts-btn btn-primary with-arrow">Request Quote <i class="fa-regular fa-arrow-up-right"></i></a>
                     </div>
                     <!-- about inner content area end -->
                 </div>
@@ -630,7 +630,7 @@
                         </div>
                         <div class="col-lg-12 col-xl-6 pl--control-feedback">
                             <div class="thumbnail">
-                                <img src="assets/images/solution/04.png" alt="solution">
+                                <img src="assets/images/solution/04.jpg" alt="solution" style="width: 250px; height: 250px; border-radius: 50%; object-fit: cover; display: block;">
                             </div>
                         </div>
                     </div>
