--- a/index.html
+++ b/index.html
@@ -488,8 +488,9 @@
     <!-- rts easy step area end -->
 
     <!-- rts call to action area start -->
-    <div class="rts-call-to-action-two rts-section-gap bg-cta-two">
-        <div class="container">
+    <div class="rts-call-to-action-two rts-section-gap bg-cta-two" style="background: url('assets/images/cta/04.jpg') center center/cover no-repeat; position:relative;">
+        <div style="position:absolute;inset:0;background:rgba(0, 0, 0, 0.384);z-index:1;"></div>
+        <div class="container" style="position:relative;z-index:2;">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="cta-two-main-wrapper">
@@ -723,14 +724,15 @@
                                 Let’s Get in Touch
                             </h2>
                         </div>
-                        <form action="#" class="contact-page-form mt--30">
+                        <form action="https://api.web3forms.com/submit" method="POST" class="contact-page-form mt--30">
                             <div class="name-email-wraper">
+                                <input type="hidden" name="access_key" value="8f96b66e-378b-4345-9d41-4881209d338b">
                                 <input type="name" placeholder="Your Name" required>
                                 <input type="email" placeholder="Email Address" required>
                             </div>
                             <input type="text" placeholder="Select Subject">
                             <textarea placeholder="Type Your Message" required></textarea>
-                            <button class="rts-btn btn-primary">Send Message</button>
+                            <button type="submit" name="Message_from_website" class="rts-btn btn-primary">Send Message</button>
                         </form>
                     </div>
                 </div>
