--- a/index.html
+++ b/index.html
@@ -840,7 +840,12 @@
                                                 <i class="fa-brands fa-facebook-f"></i>
                                             </a>
                                         </li>
-                                      
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa-brands fa-instagram"></i>
+                                            </a>
+                                        </li>
+                                      </ul>
                                 </div>
                             </div>
                         </div>
